--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^7.0.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
